<resources>
    <string name="app_name">Siem Médicos</string>
    <string name="name">SIEM</string>
    <string name="nameToolbar">S I E M</string>

    <string name="keyDirectionsGoogleMaps" translatable="false">AIzaSyDJS3m2mBPrE3mS2cbo0zQtewPHdgIIBHs</string>

    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>

    <!-- Error -->
    <string name="error">Hubo un error. Intente de nuevo más tarde.</string>
    <string name="errorConnection">Hubo un error. Compruebe la conexión a internet e intente de nuevo más tarde.</string>
    <string name="errorNoRoute">No se encontró una ruta posible.</string>
    <string name="errorEmptyFields">Debe completar todos los campos</string>
    <string name="errorLogin">El correo electrónico o la contraseña no son válidos</string>
    <string name="errorUpdateEstado">Hubo un error al actualizar el estado</string>
    <string name="errorUnlink">Hubo un error al desvincularse del auxilio</string>
    <string name="errorFinalizarAuxilio">Hubo un error al finalizar el auxilio</string>
    <string name="errorNoLocation">No hemos podido enviar su ubicación actual, necesaria para el cambio de Estado.\nIntente de nuevo mas tarde.</string>
    <string name="errorNewPassword">No coinciden las nuevas contraseñas</string>

    <!-- Notificacion -->
    <string name="intensiveMode">Modo Intensivo</string>
    <string name="normalMode">Modo Normal</string>
    <string name="statusNotification">Estado %1$s</string>

    <!-- Login -->
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="login">Iniciar sesión</string>

    <!-- Logout -->
    <string name="saliendo">Saliendo&#8230;</string>

    <!-- Menu -->
    <string name="updateStatus">Actualizar estado</string>
    <string name="logout">Cerrar sesión</string>
    <string name="changePass">Cambiar contraseña</string>

    <!-- Map -->
    <string name="descripcionAuxilio">Auxilio %1$s</string>
    <string name="unlink">Desvincular</string>
    <string name="finalize">Finalizar</string>
    <string name="confirmUnlink">Está seguro que desea desvincularse del auxilio?</string>
    <string name="confirmFinalize">Está seguro que desea finalizar el auxilio?</string>
    <string name="nuevoAuxilio">Se te ha asignado a un nuevo auxilio</string>
    <string name="activateGPS">Debe activar el GPS para continuar.</string>
    <string name="asignNuevoAuxilio">Se te ha asignado a un nuevo auxilio.</string>
    <string name="cancelAuxilio">Se ha cancelado el auxilio actual.\nRecuerda cambiar el estado a Disponible cuando estes listo para recibir otro auxilio.</string>
    <string name="cancelAuxilioNotification">Se ha cancelado el auxilio actual</string>
    <string name="recalculate">Recalculando…</string>

    <!-- Detalles Auxilio -->
    <string name="paciente">Paciente</string>
    <string name="motivos">Motivos</string>
    <string name="sexo">Sexo</string>
    <string name="noEspecificado">No especificado</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="contacto">Contacto</string>
    <string name="noStreetView">Vista de destino no disponible</string>

    <!-- Confirmacion Auxilio -->
    <string name="pudoAsistirPaciente">Pudo asistir al paciente?</string>
    <!-- Possitive -->
    <string name="ubicacionIncorrecta">Ubicación incorrecta</string>
    <string name="sinRespuesta">No respondió nadie</string>
    <string name="yaTrasladado">Ya fue trasladado</string>
    <string name="otroMotivo">Otro</string>
    <string name="observaciones">Observaciones</string>
    <!-- Negative -->
    <string name="bienCategorizadoQuestion">Auxilio bien categorizado?</string>
    <string name="subcategorizado">Subcategorizado</string>
    <string name="supercategorizado">Supracategorizado</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="dni">DNI</string>
    <string name="edad">Edad</string>
    <string name="pacientes">Pacientes</string>
    <string name="diagnostico">Diagnóstico</string>
    <string name="diagnosticoRequired">Diagnóstico (Requerido)</string>
    <string name="trasladado">Trasladado</string>

    <!-- Custom Switch -->
    <string name="si">Si</string>
    <string name="no">No</string>

    <!-- Estados medico -->
    <string name="medicoEstadoDisponible">Disponible</string>
    <string name="medicoEstadoNoDisponible">No Disponible</string>
    <string name="medicoEstadoEnAuxilio">Asignado a Auxilio</string>

    <!-- Estados asignacion -->
    <string name="enCamino">En camino</string>
    <string name="enLugar">En lugar</string>
    <string name="enTraslado">En traslado</string>

    <!-- Cambiar contrasena -->
    <string name="changePassword">Cambiar contraseña</string>
    <string name="oldPassword">Contraseña actual</string>
    <string name="newPassword">Nueva contraseña</string>
    <string name="reNewPassword">Confirmar nueva contraseña</string>
    <string name="wrongPassword">Contraseña incorrecta</string>
    <string name="changePasswordCorrectly">Se cambió la contraseña correctamente</string>
</resources>
