<?xml version="1.0" encoding="utf-8"?>
<layout
xmlns:android="http://schemas.android.com/apk/res/android">
<data>
</data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radiogroup">

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ubicacionIncorrecta"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textsizeOptions"
                android:foreground="?android:attr/selectableItemBackground"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sinRespuesta"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textsizeOptions"
                android:foreground="?android:attr/selectableItemBackground"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yaTrasladado"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textsizeOptions"
                android:foreground="?android:attr/selectableItemBackground"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/otroMotivo"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textsizeOptions"
                android:foreground="?android:attr/selectableItemBackground"/>
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/halfDefaultMargin">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edittextObservaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:hint="@string/observaciones"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</layout>