<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background_login"
            android:scaleType="center"
            android:alpha="0.8"/>

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="@dimen/widthLogo"
            android:layout_height="@dimen/heightLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/marginTopLogo"
            android:src="@drawable/logo"
            android:id="@+id/imgLogo"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputlayoutUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLogo"
            android:layout_marginTop="@dimen/doubleDefaultMargin"
            android:layout_marginLeft="@dimen/doubleDefaultMargin"
            android:layout_marginRight="@dimen/doubleDefaultMargin">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edittextUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/user"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="25"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputlayoutPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textinputlayoutUser"
            android:layout_marginTop="@dimen/halfDefaultMargin"
            android:layout_marginLeft="@dimen/doubleDefaultMargin"
            android:layout_marginRight="@dimen/doubleDefaultMargin">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edittextPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="25"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogin"
            android:layout_below="@+id/textinputlayoutPass"
            android:layout_marginTop="@dimen/doubleDefaultMargin"
            android:layout_marginLeft="@dimen/doubleDefaultMargin"
            android:layout_marginRight="@dimen/doubleDefaultMargin"
            android:text="@string/login"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textAllCaps="false"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/progressContent"
            android:background="#60000000"
            android:visibility="gone">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </RelativeLayout>
</layout>