<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.siem.siemmedicos.ui.custom.CustomToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appBarLayout"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollview"
            android:fillViewport="true"
            android:scrollbars="none">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/changePassword"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:textSize="@dimen/textsizeChangePassword"
                    android:id="@+id/titleChangePassword"
                    android:layout_marginTop="@dimen/halfDefaultMargin"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/defaultMargin"
                    android:layout_marginLeft="@dimen/halfDefaultMargin"
                    android:layout_marginRight="@dimen/halfDefaultMargin"
                    android:layout_below="@+id/titleChangePassword"
                    android:id="@+id/textinputOldPassword"
                    app:passwordToggleEnabled="true">
                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edittextOldPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/oldPassword"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/halfDefaultMargin"
                    android:layout_marginLeft="@dimen/halfDefaultMargin"
                    android:layout_marginRight="@dimen/halfDefaultMargin"
                    android:layout_below="@+id/textinputOldPassword"
                    android:id="@+id/textinputNewPassword"
                    app:passwordToggleEnabled="true">
                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edittextNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/newPassword"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/halfDefaultMargin"
                    android:layout_marginLeft="@dimen/halfDefaultMargin"
                    android:layout_marginRight="@dimen/halfDefaultMargin"
                    android:layout_below="@+id/textinputNewPassword"
                    android:id="@+id/textinputReNewPassword"
                    app:passwordToggleEnabled="true">
                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edittextReNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/reNewPassword"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="@dimen/defaultMargin"
                    android:src="@drawable/ic_send"
                    android:tint="@android:color/white"
                    android:id="@+id/changeButton"
                    android:background="?android:attr/selectableItemBackground"
                    app:backgroundTint="@color/colorPrimary"
                    app:fabSize="normal"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorBlur"
                    android:id="@+id/contentProgress"
                    android:visibility="gone">
                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"/>
                </RelativeLayout>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</layout>