<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:test="http://schemas.android.com/tools">
    <data>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.siem.siemmedicos.ui.custom.CustomToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appBarLayout"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/halfDefaultMargin"
            android:id="@+id/scrollview"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/heightStreetView"
                    android:id="@+id/contentStreetviewPanorama">
                    <fragment
                        android:name="com.google.android.gms.maps.StreetViewPanoramaFragment"
                        android:id="@+id/streetViewPanorama"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/heightStreetView"
                    android:id="@+id/contentErrorStreetView"
                    android:background="@android:color/black"
                    android:visibility="gone">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@android:color/white"
                        android:text="@string/noStreetView"
                        android:textSize="17sp"
                        android:id="@+id/textErrorStreetView"/>

                </RelativeLayout>

                <com.siem.siemmedicos.ui.custom.CustomDetallesAuxilio
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/heightContainerExtraData"
                    android:id="@+id/containerDetallesAuxilio"
                    android:layout_marginTop="@dimen/halfDefaultMargin"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <!-- Paciente -->
                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:id="@+id/textviewPacienteTitle"
                            android:text="@string/paciente"
                            android:textSize="@dimen/textsizeTitle"
                            android:paddingLeft="@dimen/halfDefaultMargin"
                            android:paddingRight="@dimen/halfDefaultMargin"/>
                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:id="@+id/textviewPaciente"
                            test:text="Frontalini Lucas"
                            android:textSize="@dimen/textsizeData"
                            android:layout_marginLeft="@dimen/halfDefaultMargin"
                            android:layout_marginStart="@dimen/halfDefaultMargin"
                            android:paddingLeft="@dimen/halfDefaultMargin"
                            android:paddingRight="@dimen/halfDefaultMargin"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <!-- Sexo -->
                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:id="@+id/textviewSexoTitle"
                            android:text="@string/sexo"
                            android:textSize="@dimen/textsizeTitle"
                            android:paddingLeft="@dimen/halfDefaultMargin"
                            android:paddingRight="@dimen/halfDefaultMargin"/>
                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:id="@+id/textviewSexo"
                            test:text="Masculino"
                            android:textSize="@dimen/textsizeData"
                            android:layout_marginLeft="@dimen/halfDefaultMargin"
                            android:layout_marginStart="@dimen/halfDefaultMargin"
                            android:paddingLeft="@dimen/halfDefaultMargin"
                            android:paddingRight="@dimen/halfDefaultMargin"/>
                    </LinearLayout>
                </LinearLayout>

                <!-- Contacto -->
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:id="@+id/textviewContactoTitle"
                    android:text="@string/contacto"
                    android:textSize="@dimen/textsizeTitle"
                    android:layout_marginTop="@dimen/halfDefaultMargin"
                    android:paddingLeft="@dimen/halfDefaultMargin"
                    android:paddingRight="@dimen/halfDefaultMargin"/>
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:id="@+id/textviewContacto"
                    test:text="1234-5678"
                    android:textSize="@dimen/textsizeData"
                    android:layout_marginLeft="@dimen/halfDefaultMargin"
                    android:layout_marginStart="@dimen/halfDefaultMargin"
                    android:paddingLeft="@dimen/halfDefaultMargin"
                    android:paddingRight="@dimen/halfDefaultMargin"/>

                <!-- Motivos -->
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:id="@+id/textviewMotivosTitle"
                    android:text="@string/motivos"
                    android:textSize="@dimen/textsizeTitle"
                    android:layout_marginTop="@dimen/halfDefaultMargin"
                    android:paddingLeft="@dimen/halfDefaultMargin"
                    android:paddingRight="@dimen/halfDefaultMargin"/>
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:id="@+id/textviewMotivos"
                    test:text="- Hemorragia leve\n- Hospital privado\n- Edad mayor a 65 años"
                    android:textSize="@dimen/textsizeData"
                    android:layout_marginLeft="@dimen/halfDefaultMargin"
                    android:layout_marginStart="@dimen/halfDefaultMargin"
                    android:paddingLeft="@dimen/halfDefaultMargin"
                    android:paddingRight="@dimen/halfDefaultMargin"/>

                <!-- Observaciones -->
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:id="@+id/textviewObservacionesTitle"
                    android:text="@string/observaciones"
                    android:textSize="@dimen/textsizeTitle"
                    android:layout_marginTop="@dimen/halfDefaultMargin"
                    android:paddingLeft="@dimen/halfDefaultMargin"
                    android:paddingRight="@dimen/halfDefaultMargin"/>
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:id="@+id/textviewObservaciones"
                    test:text="Observaciones"
                    android:textSize="@dimen/textsizeData"
                    android:layout_marginLeft="@dimen/halfDefaultMargin"
                    android:layout_marginStart="@dimen/halfDefaultMargin"
                    android:paddingLeft="@dimen/halfDefaultMargin"
                    android:paddingRight="@dimen/halfDefaultMargin"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>